NetX somewhat set up

--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -40,12 +40,13 @@ Mcu.Pin17=VP_ICACHE_VS_ICACHE
 Mcu.Pin18=VP_NETXDUO_VS_NXOoCore
 Mcu.Pin19=VP_NETXDUO_VS_NetworkOoInterface
 Mcu.Pin2=PC2
-Mcu.Pin20=VP_PWR_VS_SECSignals
-Mcu.Pin21=VP_PWR_VS_LPOM
-Mcu.Pin22=VP_SYS_VS_tim1
-Mcu.Pin23=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin24=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin25=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin21=VP_PWR_VS_SECSignals
+Mcu.Pin22=VP_PWR_VS_LPOM
+Mcu.Pin23=VP_SYS_VS_tim1
+Mcu.Pin24=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin25=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin26=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PC3
 Mcu.Pin4=PA0
 Mcu.Pin5=PA1
@@ -53,12 +54,16 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA7
-Mcu.PinsNb=26
+Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563VGTx
 MxCube.Version=6.14.1
 MxDb.Version=DB.6.0.141
+NETXDUO.ETH_ON=1
+NETXDUO.IPParameters=NX_ENABLE_INTERFACE_CAPABILITY,NetXDuo_Generate_Init_Code,ETH_ON
+NETXDUO.NX_ENABLE_INTERFACE_CAPABILITY=false
+NETXDUO.NetXDuo_Generate_Init_Code=false
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -223,7 +228,8 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=128000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
-THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE
+THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION
+THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=false
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
 VP_BOOTPATH_VS_BOOTPATH.Signal=BOOTPATH_VS_BOOTPATH
@@ -233,9 +239,11 @@ VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_NETXDUO_VS_EthernetOoPhyOoInterface.Mode=Custom_Phy_Interface
+VP_NETXDUO_VS_EthernetOoPhyOoInterface.Signal=NETXDUO_VS_EthernetOoPhyOoInterface
 VP_NETXDUO_VS_NXOoCore.Mode=NX_Core
 VP_NETXDUO_VS_NXOoCore.Signal=NETXDUO_VS_NXOoCore
-VP_NETXDUO_VS_NetworkOoInterface.Mode=Custom_Interface
+VP_NETXDUO_VS_NetworkOoInterface.Mode=Ethernet_Interface
 VP_NETXDUO_VS_NetworkOoInterface.Signal=NETXDUO_VS_NetworkOoInterface
 VP_PWR_VS_LPOM.Mode=PowerOptimisation
 VP_PWR_VS_LPOM.Signal=PWR_VS_LPOM
