--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -1,10 +1,21 @@
 #MicroXplorer Configuration settings - do not modify
+BOOTPATH.BootPathName=LEGACY
+BOOTPATH.IPParameters=BootPathName
+BOOTPATH.UserSelectedBootPath=LEGACY
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_MII_MODE
+FDCAN1.CalculateBaudRateNominal=1333333
+FDCAN1.CalculateTimeBitNominal=750
+FDCAN1.CalculateTimeQuantumNominal=250.0
+FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
+FDCAN2.CalculateBaudRateNominal=1333333
+FDCAN2.CalculateTimeBitNominal=750
+FDCAN2.CalculateTimeQuantumNominal=250.0
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
@@ -15,16 +26,18 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=BOOTPATH
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=THREADX
+Mcu.IP10=RCC
+Mcu.IP11=SYS
+Mcu.IP12=THREADX
 Mcu.IP2=ETH
-Mcu.IP3=ICACHE
-Mcu.IP4=MEMORYMAP
-Mcu.IP5=NETXDUO
-Mcu.IP6=NVIC
-Mcu.IP7=PWR
-Mcu.IP8=RCC
-Mcu.IP9=SYS
-Mcu.IPNb=11
+Mcu.IP3=FDCAN1
+Mcu.IP4=FDCAN2
+Mcu.IP5=ICACHE
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NETXDUO
+Mcu.IP8=NVIC
+Mcu.IP9=PWR
+Mcu.IPNb=13
 Mcu.Name=STM32H563VGTx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -34,27 +47,31 @@ Mcu.Pin11=PC5
 Mcu.Pin12=PB0
 Mcu.Pin13=PB1
 Mcu.Pin14=PB12
-Mcu.Pin15=PB15
-Mcu.Pin16=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin17=VP_ICACHE_VS_ICACHE
-Mcu.Pin18=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin19=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin15=PB13
+Mcu.Pin16=PB15
+Mcu.Pin17=PD9
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
 Mcu.Pin2=PC2
-Mcu.Pin20=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin21=VP_PWR_VS_SECSignals
-Mcu.Pin22=VP_PWR_VS_LPOM
-Mcu.Pin23=VP_SYS_VS_tim1
-Mcu.Pin24=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin25=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin26=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_CORTEX_M33_NS_VS_Hclk
+Mcu.Pin21=VP_ICACHE_VS_ICACHE
+Mcu.Pin22=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin23=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin24=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin25=VP_PWR_VS_SECSignals
+Mcu.Pin26=VP_PWR_VS_LPOM
+Mcu.Pin27=VP_SYS_VS_tim1
+Mcu.Pin28=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin29=VP_BOOTPATH_VS_BOOTPATH
 Mcu.Pin3=PC3
+Mcu.Pin30=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin4=PA0
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PA7
-Mcu.PinsNb=27
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563VGTx
@@ -85,6 +102,10 @@ PA0.Mode=MII
 PA0.Signal=ETH_CRS
 PA1.Mode=MII
 PA1.Signal=ETH_RX_CLK
+PA11.Mode=FDCAN_Activate
+PA11.Signal=FDCAN1_RX
+PA12.Mode=FDCAN_Activate
+PA12.Signal=FDCAN1_TX
 PA2.Mode=MII
 PA2.Signal=ETH_MDIO
 PA3.Mode=MII
@@ -99,6 +120,8 @@ PB1.Mode=MII
 PB1.Signal=ETH_RXD3
 PB12.Mode=MII
 PB12.Signal=ETH_TXD0
+PB13.Mode=FDCAN_Activate
+PB13.Signal=FDCAN2_TX
 PB15.Mode=MII
 PB15.Signal=ETH_TXD1
 PC1.Mode=MII
@@ -111,6 +134,8 @@ PC4.Mode=MII
 PC4.Signal=ETH_RXD0
 PC5.Mode=MII
 PC5.Signal=ETH_RXD1
+PD9.Mode=FDCAN_Activate
+PD9.Signal=FDCAN2_RX
 PE2.Mode=MII
 PE2.Signal=ETH_TXD3
 PinOutPanel.RotationAngle=0
@@ -162,7 +187,8 @@ RCC.DACFreq_Value=32768
 RCC.EPOD_VALUE=4000000
 RCC.ETHFreq_Value=64000000
 RCC.FCLKCortexFreq_Value=32000000
-RCC.FDCANFreq_Value=25000000
+RCC.FDCANClockSelection=RCC_FDCANCLKSOURCE_PLL1Q
+RCC.FDCANFreq_Value=64000000
 RCC.FamilyName=M
 RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=25000000
@@ -173,7 +199,7 @@ RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
 RCC.I2C4Freq_Value=32000000
 RCC.I3C1Freq_Value=32000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPTIM3Freq_Value=32000000
