--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -12,10 +12,6 @@ FDCAN1.CalculateBaudRateNominal=1333333
 FDCAN1.CalculateTimeBitNominal=750
 FDCAN1.CalculateTimeQuantumNominal=250.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
-FDCAN2.CalculateBaudRateNominal=1333333
-FDCAN2.CalculateTimeBitNominal=750
-FDCAN2.CalculateTimeQuantumNominal=250.0
-FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
@@ -26,17 +22,17 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=BOOTPATH
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=RCC
-Mcu.IP11=SYS
-Mcu.IP12=THREADX
+Mcu.IP10=SYS
+Mcu.IP11=THREADX
+Mcu.IP12=USART3
 Mcu.IP2=ETH
 Mcu.IP3=FDCAN1
-Mcu.IP4=FDCAN2
-Mcu.IP5=ICACHE
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NETXDUO
-Mcu.IP8=NVIC
-Mcu.IP9=PWR
+Mcu.IP4=ICACHE
+Mcu.IP5=MEMORYMAP
+Mcu.IP6=NETXDUO
+Mcu.IP7=NVIC
+Mcu.IP8=PWR
+Mcu.IP9=RCC
 Mcu.IPNb=13
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
@@ -47,8 +43,8 @@ Mcu.Pin11=PC5
 Mcu.Pin12=PB0
 Mcu.Pin13=PB1
 Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB15
+Mcu.Pin15=PB15
+Mcu.Pin16=PD8
 Mcu.Pin17=PD9
 Mcu.Pin18=PA11
 Mcu.Pin19=PA12
@@ -79,20 +75,23 @@ MxCube.Version=6.14.1
 MxDb.Version=DB.6.0.141
 NETXDUO.ETH_ON=1
 NETXDUO.IPParameters=ETH_ON
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC.SysTick_IRQn=true\:14\:0\:false\:false\:false\:false\:true\:false
-NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:14\:0\:false\:false\:false\:false\:true\:false\:false
+NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.Mode=MII
 PA0.Signal=ETH_CRS
 PA1.Mode=MII
@@ -115,8 +114,6 @@ PB1.Mode=MII
 PB1.Signal=ETH_RXD3
 PB12.Mode=MII
 PB12.Signal=ETH_TXD0
-PB13.Mode=FDCAN_Activate
-PB13.Signal=FDCAN2_TX
 PB15.Mode=MII
 PB15.Signal=ETH_TXD1
 PC1.Mode=MII
@@ -129,8 +126,12 @@ PC4.Mode=MII
 PC4.Signal=ETH_RXD0
 PC5.Mode=MII
 PC5.Signal=ETH_RXD1
-PD9.Mode=FDCAN_Activate
-PD9.Signal=FDCAN2_RX
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.Locked=true
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
 PE2.Mode=MII
 PE2.Signal=ETH_TXD3
 PinOutPanel.RotationAngle=0
@@ -165,7 +166,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_ICACHE_Init-ICACHE-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_FDCAN2_Init-FDCAN2-false-HAL-true,6-MX_ICACHE_Init-ICACHE-false-HAL-true,7-MX_NetXDuo_Init-NETXDUO-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -194,7 +195,7 @@ RCC.I2C2Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
 RCC.I2C4Freq_Value=32000000
 RCC.I3C1Freq_Value=32000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM1Freq_Value=32000000
 RCC.LPTIM2Freq_Value=32000000
 RCC.LPTIM3Freq_Value=32000000
@@ -228,6 +229,7 @@ RCC.SPI1Freq_Value=64000000
 RCC.SPI2Freq_Value=64000000
 RCC.SPI3Freq_Value=64000000
 RCC.SPI4Freq_Value=32000000
+RCC.SPI5Freq_Value=32000000
 RCC.SPI6Freq_Value=32000000
 RCC.SYSCLKFreq_VALUE=32000000
 RCC.UART12Freq_Value=32000000
@@ -253,6 +255,8 @@ RCC.VCOPLL3OutputFreq_Value=516000000
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=false
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
 VP_BOOTPATH_VS_BOOTPATH.Signal=BOOTPATH_VS_BOOTPATH
 VP_CORTEX_M33_NS_VS_Hclk.Mode=Hclk_Mode
