--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -28,7 +28,7 @@ FDCAN1.CalculateTimeBitNominal=750
 FDCAN1.CalculateTimeQuantumNominal=250.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -236,10 +236,9 @@ PA4.GPIO_Label=ADC12_INP18
 PA4.Locked=true
 PA4.Signal=ADCx_INP18
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=ETH_RMII_TX_EN
+PA5.GPIO_Label=ADC12_INP19
 PA5.Locked=true
-PA5.Mode=RMII
-PA5.Signal=ETH_TX_EN
+PA5.Signal=ADCx_INP19
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ADC12_INP3
 PA6.Locked=true
@@ -507,7 +506,11 @@ PG0.Locked=true
 PG1.Locked=true
 PG1.Signal=SPI2_MOSI
 PG10.Locked=true
+PG11.GPIOParameters=GPIO_Label
+PG11.GPIO_Label=ETH_RMII_TX_EN
 PG11.Locked=true
+PG11.Mode=RMII
+PG11.Signal=ETH_TX_EN
 PG12.Locked=true
 PG13.Locked=true
 PG14.GPIOParameters=GPIO_Label
@@ -672,6 +675,9 @@ SH.ADCx_INP15.ConfNb=2
 SH.ADCx_INP18.0=ADC1_INP18
 SH.ADCx_INP18.1=ADC2_INP18
 SH.ADCx_INP18.ConfNb=2
+SH.ADCx_INP19.0=ADC1_INP19,IN19-Single-Ended
+SH.ADCx_INP19.1=ADC2_INP19,IN19-Single-Ended
+SH.ADCx_INP19.ConfNb=2
 SH.ADCx_INP3.0=ADC1_INP3
 SH.ADCx_INP3.1=ADC2_INP3
 SH.ADCx_INP3.ConfNb=2
