code has been generated and thing has been built!

--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -37,19 +37,20 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=PWR
-Mcu.IP11=RCC
-Mcu.IP12=SYS
-Mcu.IP13=THREADX
+Mcu.IP10=NVIC
+Mcu.IP11=PWR
+Mcu.IP12=RCC
+Mcu.IP13=SYS
+Mcu.IP14=THREADX
 Mcu.IP2=BOOTPATH
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=ETH
 Mcu.IP5=FDCAN1
 Mcu.IP6=ICACHE
-Mcu.IP7=MEMORYMAP
-Mcu.IP8=NETXDUO
-Mcu.IP9=NVIC
-Mcu.IPNb=14
+Mcu.IP7=LPUART1
+Mcu.IP8=MEMORYMAP
+Mcu.IP9=NETXDUO
+Mcu.IPNb=15
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -72,13 +73,14 @@ Mcu.Pin112=VP_CORTEX_M33_NS_VS_Hclk
 Mcu.Pin113=VP_ICACHE_VS_ICACHE
 Mcu.Pin114=VP_NETXDUO_VS_NXOoCore
 Mcu.Pin115=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin116=VP_PWR_VS_SECSignals
-Mcu.Pin117=VP_PWR_VS_LPOM
-Mcu.Pin118=VP_SYS_VS_tim1
-Mcu.Pin119=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin116=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin117=VP_PWR_VS_SECSignals
+Mcu.Pin118=VP_PWR_VS_LPOM
+Mcu.Pin119=VP_SYS_VS_tim1
 Mcu.Pin12=PF4
-Mcu.Pin120=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin121=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin120=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin121=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin122=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -174,12 +176,14 @@ Mcu.Pin96=PD7
 Mcu.Pin97=PG9
 Mcu.Pin98=PG10
 Mcu.Pin99=PG11
-Mcu.PinsNb=122
+Mcu.PinsNb=123
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
+NETXDUO.ETH_ON=1
+NETXDUO.IPParameters=ETH_ON
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -207,6 +211,7 @@ PA1.Locked=true
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
 PA10.Locked=true
+PA10.Mode=Asynchronous
 PA10.Signal=LPUART1_RX
 PA11.Mode=FDCAN_Activate
 PA11.Signal=FDCAN1_RX
@@ -247,6 +252,7 @@ PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA8.Locked=true
 PA9.Locked=true
+PA9.Mode=Asynchronous
 PA9.Signal=LPUART1_TX
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=ADC12_INP9
@@ -571,7 +577,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
@@ -704,9 +710,11 @@ VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
+VP_NETXDUO_VS_EthernetOoPhyOoInterface.Mode=Custom_Phy_Interface
+VP_NETXDUO_VS_EthernetOoPhyOoInterface.Signal=NETXDUO_VS_EthernetOoPhyOoInterface
 VP_NETXDUO_VS_NXOoCore.Mode=NX_Core
 VP_NETXDUO_VS_NXOoCore.Signal=NETXDUO_VS_NXOoCore
-VP_NETXDUO_VS_NetworkOoInterface.Mode=Custom_Interface
+VP_NETXDUO_VS_NetworkOoInterface.Mode=Ethernet_Interface
 VP_NETXDUO_VS_NetworkOoInterface.Signal=NETXDUO_VS_NetworkOoInterface
 VP_PWR_VS_LPOM.Mode=PowerOptimisation
 VP_PWR_VS_LPOM.Signal=PWR_VS_LPOM
