--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -37,20 +37,21 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=NVIC
-Mcu.IP11=PWR
-Mcu.IP12=RCC
-Mcu.IP13=SYS
-Mcu.IP14=THREADX
+Mcu.IP10=NETXDUO
+Mcu.IP11=NVIC
+Mcu.IP12=PWR
+Mcu.IP13=RCC
+Mcu.IP14=SYS
+Mcu.IP15=THREADX
 Mcu.IP2=BOOTPATH
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=ETH
 Mcu.IP5=FDCAN1
 Mcu.IP6=ICACHE
-Mcu.IP7=LPUART1
-Mcu.IP8=MEMORYMAP
-Mcu.IP9=NETXDUO
-Mcu.IPNb=15
+Mcu.IP7=IWDG
+Mcu.IP8=LPUART1
+Mcu.IP9=MEMORYMAP
+Mcu.IPNb=16
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -71,16 +72,17 @@ Mcu.Pin110=PB9
 Mcu.Pin111=PE0
 Mcu.Pin112=VP_CORTEX_M33_NS_VS_Hclk
 Mcu.Pin113=VP_ICACHE_VS_ICACHE
-Mcu.Pin114=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin115=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin116=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin117=VP_PWR_VS_SECSignals
-Mcu.Pin118=VP_PWR_VS_LPOM
-Mcu.Pin119=VP_SYS_VS_tim1
+Mcu.Pin114=VP_IWDG_VS_IWDG
+Mcu.Pin115=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin116=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin117=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin118=VP_PWR_VS_SECSignals
+Mcu.Pin119=VP_PWR_VS_LPOM
 Mcu.Pin12=PF4
-Mcu.Pin120=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin121=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin122=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin120=VP_SYS_VS_tim1
+Mcu.Pin121=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin122=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin123=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -176,7 +178,7 @@ Mcu.Pin96=PD7
 Mcu.Pin97=PG9
 Mcu.Pin98=PG10
 Mcu.Pin99=PG11
-Mcu.PinsNb=123
+Mcu.PinsNb=124
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -708,6 +710,8 @@ VP_CORTEX_M33_NS_VS_Hclk.Mode=Hclk_Mode
 VP_CORTEX_M33_NS_VS_Hclk.Signal=CORTEX_M33_NS_VS_Hclk
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_NETXDUO_VS_EthernetOoPhyOoInterface.Mode=Custom_Phy_Interface
