--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -330,93 +330,96 @@ PC5.GPIO_Label=ETH_RMI_RXD1
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=LTC4376_FAULT
 PC6.Locked=true
+PC6.Signal=GPIO_Input
 PC7.Locked=true
 PC8.Locked=true
 PC9.Locked=true
 PD0.GPIOParameters=GPIO_Label
-PD0.GPIO_Label=PD0_IO
+PD0.GPIO_Label=EF_DASH_EN
 PD0.Locked=true
 PD0.Signal=GPIO_Output
 PD1.GPIOParameters=GPIO_Label
-PD1.GPIO_Label=PD1_IO
+PD1.GPIO_Label=EF_DASH_ER
 PD1.Locked=true
 PD1.Signal=GPIO_Input
 PD10.GPIOParameters=GPIO_Label
-PD10.GPIO_Label=PD10_IO
+PD10.GPIO_Label=EF_FANBATT_EN
 PD10.Locked=true
 PD10.Signal=GPIO_Output
 PD11.GPIOParameters=GPIO_Label
-PD11.GPIO_Label=PD11_IO
+PD11.GPIO_Label=EF_FANBATT_ER
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Label
-PD12.GPIO_Label=PD12_IO
+PD12.GPIO_Label=EF_PUMP1_EN
 PD12.Locked=true
 PD12.Signal=GPIO_Output
 PD13.GPIOParameters=GPIO_Label
-PD13.GPIO_Label=PD13_IO
+PD13.GPIO_Label=EF_PUMP1_ER
 PD13.Locked=true
 PD13.Signal=GPIO_Input
 PD14.GPIOParameters=GPIO_Label
-PD14.GPIO_Label=PD14_IO
+PD14.GPIO_Label=EF_PUMP2_EN
 PD14.Locked=true
 PD14.Signal=GPIO_Output
 PD15.GPIOParameters=GPIO_Label
-PD15.GPIO_Label=PD15_IO
+PD15.GPIO_Label=EF_PUMP2_ER
 PD15.Locked=true
 PD15.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_Label
-PD2.GPIO_Label=PD2_IO
+PD2.GPIO_Label=EF_BREAK_EN
 PD2.Locked=true
 PD2.Signal=GPIO_Output
 PD3.GPIOParameters=GPIO_Label
-PD3.GPIO_Label=PD3_IO
+PD3.GPIO_Label=EF_BREAK_ER
 PD3.Locked=true
 PD3.Signal=GPIO_Input
 PD4.GPIOParameters=GPIO_Label
-PD4.GPIO_Label=PD4_IO
+PD4.GPIO_Label=EF_SHUTDOWN_EN
 PD4.Locked=true
 PD4.Signal=GPIO_Output
 PD5.GPIOParameters=GPIO_Label
-PD5.GPIO_Label=PD5_IO
+PD5.GPIO_Label=EF_SHUTDOWN_ER
 PD5.Locked=true
 PD5.Signal=GPIO_Input
 PD6.GPIOParameters=GPIO_Label
-PD6.GPIO_Label=PD6_IO
+PD6.GPIO_Label=EF_LV_EN
 PD6.Locked=true
 PD6.Signal=GPIO_Output
 PD7.GPIOParameters=GPIO_Label
-PD7.GPIO_Label=PD7_IO
+PD7.GPIO_Label=EF_LV_ER
 PD7.Locked=true
 PD7.Signal=GPIO_Input
 PD8.GPIOParameters=GPIO_Label
-PD8.GPIO_Label=PD8_IO
+PD8.GPIO_Label=EF_RADFAN_EN
 PD8.Locked=true
 PD8.Signal=GPIO_Output
 PD9.GPIOParameters=GPIO_Label
-PD9.GPIO_Label=PD9_IO
+PD9.GPIO_Label=EF_RADFAN_ER
 PD9.Locked=true
 PD9.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
-PE0.GPIO_Label=PE0_IO
+PE0.GPIO_Label=IMD_GPIO
 PE0.Locked=true
 PE0.Signal=GPIO_Input
 PE10.GPIOParameters=PinState,GPIO_Label
-PE10.GPIO_Label=PE10_IO
+PE10.GPIO_Label=PHY_RESET
 PE10.Locked=true
 PE10.PinState=GPIO_PIN_SET
 PE10.Signal=GPIO_Output
 PE11.GPIOParameters=GPIO_Label
-PE11.GPIO_Label=PE11_IO
+PE11.GPIO_Label=PHY_GPIO
 PE11.Locked=true
 PE11.Signal=GPIO_Input
 PE12.GPIOParameters=GPIO_Label
-PE12.GPIO_Label=PE12_IO
+PE12.GPIO_Label=EF_SPARE_EN
 PE12.Locked=true
 PE12.Signal=GPIO_Output
 PE13.GPIOParameters=GPIO_Label
-PE13.GPIO_Label=PE13_IO
+PE13.GPIO_Label=EF_SPARE_ER
 PE13.Locked=true
 PE13.Signal=GPIO_Input
 PE14.GPIOParameters=GPIO_Label
@@ -425,23 +428,23 @@ PE14.Locked=true
 PE14.Signal=GPIO_Output
 PE15.Locked=true
 PE2.GPIOParameters=GPIO_Label
-PE2.GPIO_Label=PE2_IO
+PE2.GPIO_Label=CKPT_GPIO
 PE2.Locked=true
 PE2.Signal=GPIO_Input
 PE3.GPIOParameters=GPIO_Label
-PE3.GPIO_Label=PE3_IO
+PE3.GPIO_Label=INERTIA_SW_GPIO
 PE3.Locked=true
 PE3.Signal=GPIO_Input
 PE4.GPIOParameters=GPIO_Label
-PE4.GPIO_Label=PE4_IO
+PE4.GPIO_Label=TSMS_GPIO
 PE4.Locked=true
 PE4.Signal=GPIO_Input
 PE5.GPIOParameters=GPIO_Label
-PE5.GPIO_Label=PE5_IO
+PE5.GPIO_Label=IMU_INT1
 PE5.Locked=true
 PE5.Signal=GPXTI5
 PE6.GPIOParameters=GPIO_Label
-PE6.GPIO_Label=PE6_IO
+PE6.GPIO_Label=IMU_INT2
 PE6.Locked=true
 PE6.Signal=GPXTI6
 PE7.GPIOParameters=GPIO_Label
@@ -449,11 +452,11 @@ PE7.GPIO_Label=PHY_IRQ
 PE7.Locked=true
 PE7.Signal=GPXTI7
 PE8.GPIOParameters=GPIO_Label
-PE8.GPIO_Label=PE8_IO
+PE8.GPIO_Label=PHY_RX_ER
 PE8.Locked=true
 PE8.Signal=GPIO_Input
 PE9.GPIOParameters=GPIO_Label
-PE9.GPIO_Label=PE9_IO
+PE9.GPIO_Label=PHY_RX_DV
 PE9.Locked=true
 PE9.Signal=GPIO_Input
 PF0.Locked=true
@@ -461,7 +464,7 @@ PF0.Signal=I2C2_SDA
 PF1.Locked=true
 PF1.Signal=I2C2_SCL
 PF10.GPIOParameters=GPIO_Label
-PF10.GPIO_Label=PF10_IO
+PF10.GPIO_Label=HV_C_GPIO
 PF10.Locked=true
 PF10.Signal=GPIO_Input
 PF11.Locked=true
@@ -475,39 +478,39 @@ PF14.Locked=true
 PF14.Mode=IN6-Single-Ended
 PF14.Signal=ADC2_INP6
 PF15.GPIOParameters=GPIO_Label
-PF15.GPIO_Label=PF15_IO
+PF15.GPIO_Label=HVD_GPIO
 PF15.Locked=true
 PF15.Signal=GPIO_Input
 PF2.GPIOParameters=GPIO_Label
-PF2.GPIO_Label=PF2_IO
+PF2.GPIO_Label=EF_BATTBOX_EN
 PF2.Locked=true
 PF2.Signal=GPIO_Output
 PF3.GPIOParameters=GPIO_Label
-PF3.GPIO_Label=PF3_IO
+PF3.GPIO_Label=EF_BATTBOX_ER
 PF3.Locked=true
 PF3.Signal=GPIO_Input
 PF4.GPIOParameters=GPIO_Label
-PF4.GPIO_Label=PF4_IO
+PF4.GPIO_Label=EF_MC_EN
 PF4.Locked=true
 PF4.Signal=GPIO_Output
 PF5.GPIOParameters=GPIO_Label
-PF5.GPIO_Label=PF5_IO
+PF5.GPIO_Label=EF_MC_ER
 PF5.Locked=true
 PF5.Signal=GPIO_Input
 PF6.GPIOParameters=GPIO_Label
-PF6.GPIO_Label=PF6_IO
+PF6.GPIO_Label=BMS_GPIO
 PF6.Locked=true
 PF6.Signal=GPIO_Input
 PF7.GPIOParameters=GPIO_Label
-PF7.GPIO_Label=PF7_IO
+PF7.GPIO_Label=BOTS_GPIO
 PF7.Locked=true
 PF7.Signal=GPIO_Input
 PF8.GPIOParameters=GPIO_Label
-PF8.GPIO_Label=PF8_IO
+PF8.GPIO_Label=SPARE_GPIO
 PF8.Locked=true
 PF8.Signal=GPIO_Input
 PF9.GPIOParameters=GPIO_Label
-PF9.GPIO_Label=PF9_IO
+PF9.GPIO_Label=BSPD_GPIO
 PF9.Locked=true
 PF9.Signal=GPIO_Input
 PG0.Locked=true
@@ -579,7 +582,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_FDCAN1_Init-FDCAN1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
