Changed ADC destination buffer size to half-word since 12-bit ADC

--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -79,9 +79,10 @@ FDCAN1.CalculateTimeQuantumNominal=250.0
 FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPDMA1.CIRCULARMODE_GPDMACH5=ENABLE
+GPDMA1.DESTDATAWIDTH_GPDMACH5=DMA_DEST_DATAWIDTH_HALFWORD
 GPDMA1.DESTINC_GPDMACH5=DMA_DINC_INCREMENTED
 GPDMA1.IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMACH5=__NULL
-GPDMA1.IPParameters=CIRCULARMODE_GPDMACH5,IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMACH5,REQUEST_GPDMACH5,SRCDATAWIDTH_GPDMACH5,DESTINC_GPDMACH5
+GPDMA1.IPParameters=CIRCULARMODE_GPDMACH5,IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMACH5,REQUEST_GPDMACH5,SRCDATAWIDTH_GPDMACH5,DESTINC_GPDMACH5,DESTDATAWIDTH_GPDMACH5
 GPDMA1.REQUEST_GPDMACH5=GPDMA1_REQUEST_ADC1
 GPDMA1.SRCDATAWIDTH_GPDMACH5=DMA_SRC_DATAWIDTH_HALFWORD
 GPIO.groupedBy=Group By Peripherals
