--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -1,6 +1,8 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-10\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC1.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_10
@@ -13,9 +15,11 @@ ADC1.ContinuousConvMode=ENABLE
 ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,MonitoredBy-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,MonitoredBy-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,MonitoredBy-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,MonitoredBy-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,MonitoredBy-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,MonitoredBy-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,OffsetNumber-9\#ChannelRegularConversion,MonitoredBy-9\#ChannelRegularConversion,NbrOfConversion
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,MonitoredBy-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,MonitoredBy-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,MonitoredBy-5\#ChannelRegularConversion,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,MonitoredBy-6\#ChannelRegularConversion,Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,OffsetNumber-7\#ChannelRegularConversion,MonitoredBy-7\#ChannelRegularConversion,Rank-8\#ChannelRegularConversion,Channel-8\#ChannelRegularConversion,SamplingTime-8\#ChannelRegularConversion,OffsetNumber-8\#ChannelRegularConversion,MonitoredBy-8\#ChannelRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,OffsetNumber-9\#ChannelRegularConversion,MonitoredBy-9\#ChannelRegularConversion,NbrOfConversion,master,Rank-10\#ChannelRegularConversion,Channel-10\#ChannelRegularConversion,SamplingTime-10\#ChannelRegularConversion,OffsetNumber-10\#ChannelRegularConversion,MonitoredBy-10\#ChannelRegularConversion,Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,MonitoredBy-11\#ChannelRegularConversion
 ADC1.MonitoredBy-0\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-1\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-10\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-11\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-2\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-3\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-4\#ChannelRegularConversion=__NULL
@@ -24,10 +28,12 @@ ADC1.MonitoredBy-6\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-7\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-8\#ChannelRegularConversion=__NULL
 ADC1.MonitoredBy-9\#ChannelRegularConversion=__NULL
-ADC1.NbrOfConversion=10
+ADC1.NbrOfConversion=12
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-10\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-11\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -38,6 +44,8 @@ ADC1.OffsetNumber-8\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.OffsetNumber-9\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-10\#ChannelRegularConversion=11
+ADC1.Rank-11\#ChannelRegularConversion=12
 ADC1.Rank-2\#ChannelRegularConversion=3
 ADC1.Rank-3\#ChannelRegularConversion=4
 ADC1.Rank-4\#ChannelRegularConversion=5
@@ -48,6 +56,8 @@ ADC1.Rank-8\#ChannelRegularConversion=9
 ADC1.Rank-9\#ChannelRegularConversion=10
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-10\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
@@ -57,13 +67,22 @@ ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-8\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC2.ContinuousConvMode=ENABLE
+ADC2.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
+ADC2.DMAContinuousRequests=ENABLE
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,MonitoredBy-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,ConversionDataManagement,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,MonitoredBy-1\#ChannelRegularConversion,NbrOfConversion
 ADC2.MonitoredBy-0\#ChannelRegularConversion=__NULL
+ADC2.MonitoredBy-1\#ChannelRegularConversion=__NULL
+ADC2.NbrOfConversion=2
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.Rank-1\#ChannelRegularConversion=2
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 BOOTPATH.BootPathName=LEGACY
 BOOTPATH.IPParameters=BootPathName
 BOOTPATH.UserSelectedBootPath=LEGACY
@@ -528,10 +547,13 @@ PF10.GPIO_Label=HV_C_GPIO
 PF10.Locked=true
 PF10.Signal=GPIO_Input
 PF11.Locked=true
+PF11.Mode=IN2-Single-Ended
 PF11.Signal=ADC1_INP2
 PF12.Locked=true
+PF12.Mode=IN6-Single-Ended
 PF12.Signal=ADC1_INP6
 PF13.Locked=true
+PF13.Mode=IN2-Single-Ended
 PF13.Signal=ADC2_INP2
 PF14.Locked=true
 PF14.Mode=IN6-Single-Ended
