Added I2C stuff for temperature sensor.

--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -105,6 +105,8 @@ GPDMA1.IPParameters=CIRCULARMODE_GPDMACH5,IPHANDLE_GPDMACH5-SIMPLEREQUEST_GPDMAC
 GPDMA1.REQUEST_GPDMACH5=GPDMA1_REQUEST_ADC1
 GPDMA1.SRCDATAWIDTH_GPDMACH5=DMA_SRC_DATAWIDTH_HALFWORD
 GPIO.groupedBy=Group By Peripherals
+I2C2.IPParameters=Timing
+I2C2.Timing=0x00707CBB
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -113,22 +115,23 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=MEMORYMAP
-Mcu.IP11=NETXDUO
-Mcu.IP12=NVIC
-Mcu.IP13=PWR
-Mcu.IP14=RCC
-Mcu.IP15=SYS
-Mcu.IP16=THREADX
+Mcu.IP10=LPUART1
+Mcu.IP11=MEMORYMAP
+Mcu.IP12=NETXDUO
+Mcu.IP13=NVIC
+Mcu.IP14=PWR
+Mcu.IP15=RCC
+Mcu.IP16=SYS
+Mcu.IP17=THREADX
 Mcu.IP2=BOOTPATH
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=ETH
 Mcu.IP5=FDCAN1
 Mcu.IP6=GPDMA1
-Mcu.IP7=ICACHE
-Mcu.IP8=IWDG
-Mcu.IP9=LPUART1
-Mcu.IPNb=17
+Mcu.IP7=I2C2
+Mcu.IP8=ICACHE
+Mcu.IP9=IWDG
+Mcu.IPNb=18
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -539,8 +542,10 @@ PE9.GPIO_Label=PHY_RX_DV
 PE9.Locked=true
 PE9.Signal=GPIO_Input
 PF0.Locked=true
+PF0.Mode=I2C
 PF0.Signal=I2C2_SDA
 PF1.Locked=true
+PF1.Mode=I2C
 PF1.Signal=I2C2_SCL
 PF10.GPIOParameters=GPIO_Label
 PF10.GPIO_Label=HV_C_GPIO
