--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -92,10 +92,10 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
-FDCAN1.CalculateBaudRateNominal=888888
-FDCAN1.CalculateTimeBitNominal=1125
-FDCAN1.CalculateTimeQuantumNominal=375.0
-FDCAN1.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
+FDCAN2.CalculateBaudRateNominal=888888
+FDCAN2.CalculateTimeBitNominal=1125
+FDCAN2.CalculateTimeQuantumNominal=375.0
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
 File.Version=6
 GPDMA1.CIRCULARMODE_GPDMACH5=ENABLE
 GPDMA1.DESTDATAWIDTH_GPDMACH5=DMA_DEST_DATAWIDTH_HALFWORD
@@ -127,7 +127,7 @@ Mcu.IP18=THREADX
 Mcu.IP2=BOOTPATH
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=ETH
-Mcu.IP5=FDCAN1
+Mcu.IP5=FDCAN2
 Mcu.IP6=GPDMA1
 Mcu.IP7=I2C2
 Mcu.IP8=ICACHE
@@ -298,10 +298,10 @@ PA1.Signal=ETH_REF_CLK
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=LPUART1_RX
-PA11.Mode=FDCAN_Activate
-PA11.Signal=FDCAN1_RX
-PA12.Mode=FDCAN_Activate
-PA12.Signal=FDCAN1_TX
+PA11.Locked=true
+PA12.Locked=true
+PA12.Mode=Full_Duplex_Master
+PA12.Signal=SPI2_SCK
 PA13(JTMS/SWDIO).GPIOParameters=GPIO_Label
 PA13(JTMS/SWDIO).GPIO_Label=JTMS
 PA13(JTMS/SWDIO).Locked=true
@@ -348,8 +348,6 @@ PB1.GPIO_Label=ADC12_INP5
 PB1.Locked=true
 PB1.Signal=ADCx_INP5
 PB10.Locked=true
-PB10.Mode=Full_Duplex_Master
-PB10.Signal=SPI2_SCK
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=ETH_RMII_TXD0
 PB12.Locked=true
@@ -371,8 +369,11 @@ PB3(JTDO/TRACESWO).Locked=true
 PB3(JTDO/TRACESWO).Signal=DEBUG_JTDO-SWO
 PB4(NJTRST).Locked=true
 PB5.Locked=true
+PB5.Mode=FDCAN_Activate
+PB5.Signal=FDCAN2_RX
 PB6.Locked=true
-PB6.Signal=I2C1_SCL
+PB6.Mode=FDCAN_Activate
+PB6.Signal=FDCAN2_TX
 PB7.Locked=true
 PB7.Signal=I2C1_SDA
 PB8.Locked=true
@@ -672,7 +673,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_FDCAN1_Init-FDCAN1-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-HAL-true,6-MX_NetXDuo_Init-NETXDUO-false-HAL-false,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_IWDG_Init-IWDG-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_I2C2_Init-I2C2-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
