--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -377,6 +377,8 @@ PB6.Signal=FDCAN2_TX
 PB7.Locked=true
 PB7.Signal=I2C1_SDA
 PB8.Locked=true
+PB9.GPIOParameters=GPIO_Label
+PB9.GPIO_Label=SPI2_NSS
 PB9.Locked=true
 PB9.Signal=SPI2_NSS
 PC0.GPIOParameters=GPIO_Label
@@ -673,7 +675,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_ETH_Init-ETH-false-HAL-true,9-MX_IWDG_Init-IWDG-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_FDCAN2_Init-FDCAN2-false-HAL-true,13-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
