Changed SPI2 to 8 bit

--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -799,8 +799,9 @@ SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SPI2.CalculateBaudRate=21.333332 MBits/s
+SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION
