Changed ThreadX ticks per second

--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -793,9 +793,10 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
-THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION
+THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_TIMER_TICKS_PER_SECOND
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=false
+THREADX.TX_TIMER_TICKS_PER_SECOND=1000
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
 VP_BOOTPATH_VS_BOOTPATH.Signal=BOOTPATH_VS_BOOTPATH
 VP_CORTEX_M33_NS_VS_Hclk.Mode=Hclk_Mode
