--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -292,7 +292,7 @@ NVIC.TimeBase=TIM1_UP_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=ADC12_INP0_1
+PA0.GPIO_Label=MUX_ADC12_INP0
 PA0.Locked=true
 PA0.Signal=ADCx_INP0
 PA1.GPIOParameters=GPIO_Label
@@ -326,7 +326,7 @@ PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=ADC12_INP15_2
+PA3.GPIO_Label=MUX_ADC12_INP15
 PA3.Locked=true
 PA3.Signal=ADCx_INP15
 PA4.GPIOParameters=GPIO_Label
@@ -355,11 +355,11 @@ PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=LPUART1_TX
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=ADC12_INP9
+PB0.GPIO_Label=MUX_ADC12_INP9
 PB0.Locked=true
 PB0.Signal=ADCx_INP9
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=ADC12_INP5
+PB1.GPIO_Label=MUX_ADC12_INP5
 PB1.Locked=true
 PB1.Signal=ADCx_INP5
 PB10.Locked=true
@@ -430,10 +430,22 @@ PC5.GPIO_Label=ETH_RMII_RXD1
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PC6.GPIOParameters=GPIO_Label
+PC6.GPIO_Label=MUX_SEL1
 PC6.Locked=true
+PC6.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=MUX_SEL2
 PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=MUX_SEL3
 PC8.Locked=true
+PC8.Signal=GPIO_Output
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=MUX_SEL4
 PC9.Locked=true
+PC9.Signal=GPIO_Output
 PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=EF_DASH_EN
 PD0.Locked=true
