Configured eFuse fault GPIO Input pins as 'Pull-up' in CubeMX

--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -461,32 +461,36 @@ PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=EF_DASH_EN
 PD0.Locked=true
 PD0.Signal=GPIO_Output
-PD1.GPIOParameters=GPIO_Label
+PD1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD1.GPIO_Label=EF_DASH_ER
+PD1.GPIO_PuPd=GPIO_PULLUP
 PD1.Locked=true
 PD1.Signal=GPIO_Input
 PD10.GPIOParameters=GPIO_Label
 PD10.GPIO_Label=EF_FANBATT_EN
 PD10.Locked=true
 PD10.Signal=GPIO_Output
-PD11.GPIOParameters=GPIO_Label
+PD11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD11.GPIO_Label=EF_FANBATT_ER
+PD11.GPIO_PuPd=GPIO_PULLUP
 PD11.Locked=true
 PD11.Signal=GPIO_Input
 PD12.GPIOParameters=GPIO_Label
 PD12.GPIO_Label=EF_PUMP1_EN
 PD12.Locked=true
 PD12.Signal=GPIO_Output
-PD13.GPIOParameters=GPIO_Label
+PD13.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD13.GPIO_Label=EF_PUMP1_ER
+PD13.GPIO_PuPd=GPIO_PULLUP
 PD13.Locked=true
 PD13.Signal=GPIO_Input
 PD14.GPIOParameters=GPIO_Label
 PD14.GPIO_Label=EF_PUMP2_EN
 PD14.Locked=true
 PD14.Signal=GPIO_Output
-PD15.GPIOParameters=GPIO_Label
+PD15.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD15.GPIO_Label=EF_PUMP2_ER
+PD15.GPIO_PuPd=GPIO_PULLUP
 PD15.Locked=true
 PD15.Signal=GPIO_Input
 PD2.GPIOParameters=GPIO_Label
@@ -500,16 +504,18 @@ PD6.GPIOParameters=GPIO_Label
 PD6.GPIO_Label=EF_LV_EN
 PD6.Locked=true
 PD6.Signal=GPIO_Output
-PD7.GPIOParameters=GPIO_Label
+PD7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD7.GPIO_Label=EF_LV_ER
+PD7.GPIO_PuPd=GPIO_PULLUP
 PD7.Locked=true
 PD7.Signal=GPIO_Input
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=EF_BREAK_EN
 PD8.Locked=true
 PD8.Signal=GPIO_Output
-PD9.GPIOParameters=GPIO_Label
+PD9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PD9.GPIO_Label=EF_BREAK_ER
+PD9.GPIO_PuPd=GPIO_PULLUP
 PD9.Locked=true
 PD9.Signal=GPIO_Input
 PE0.GPIOParameters=GPIO_Label
@@ -583,16 +589,18 @@ PF2.GPIOParameters=GPIO_Label
 PF2.GPIO_Label=EF_BATTBOX_EN
 PF2.Locked=true
 PF2.Signal=GPIO_Output
-PF3.GPIOParameters=GPIO_Label
+PF3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF3.GPIO_Label=EF_BATTBOX_ER
+PF3.GPIO_PuPd=GPIO_PULLUP
 PF3.Locked=true
 PF3.Signal=GPIO_Input
 PF4.GPIOParameters=GPIO_Label
 PF4.GPIO_Label=EF_MC_EN
 PF4.Locked=true
 PF4.Signal=GPIO_Output
-PF5.GPIOParameters=GPIO_Label
+PF5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PF5.GPIO_Label=EF_MC_ER
+PF5.GPIO_PuPd=GPIO_PULLUP
 PF5.Locked=true
 PF5.Signal=GPIO_Input
 PF6.GPIOParameters=GPIO_Label
@@ -619,8 +627,9 @@ PG10.GPIOParameters=GPIO_Label
 PG10.GPIO_Label=EF_SPARE_EN
 PG10.Locked=true
 PG10.Signal=GPIO_Output
-PG11.GPIOParameters=GPIO_Label
+PG11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG11.GPIO_Label=EF_SPARE_ER
+PG11.GPIO_PuPd=GPIO_PULLUP
 PG11.Locked=true
 PG11.Signal=GPIO_Input
 PG12.Locked=true
@@ -646,16 +655,18 @@ PG4.GPIOParameters=GPIO_Label
 PG4.GPIO_Label=EF_RADFAN_EN
 PG4.Locked=true
 PG4.Signal=GPIO_Output
-PG5.GPIOParameters=GPIO_Label
+PG5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG5.GPIO_Label=EF_RADFAN_ER
+PG5.GPIO_PuPd=GPIO_PULLUP
 PG5.Locked=true
 PG5.Signal=GPIO_Input
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=EF_SHUTDOWN_EN
 PG6.Locked=true
 PG6.Signal=GPIO_Output
-PG7.GPIOParameters=GPIO_Label
+PG7.GPIOParameters=GPIO_PuPd,GPIO_Label
 PG7.GPIO_Label=EF_SHUTDOWN_ER
+PG7.GPIO_PuPd=GPIO_PULLUP
 PG7.Locked=true
 PG7.Signal=GPIO_Input
 PG8.Locked=true
