--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -121,23 +121,23 @@ LPUART1.BaudRate=115200
 LPUART1.IPParameters=BaudRate
 MMTAppRegionsCount=0
 MMTConfigApplied=false
-MMTSectionSuffix=_Section
 Mcu.CPN=STM32H563ZIT6
 Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=LPUART1
-Mcu.IP11=MEMORYMAP
-Mcu.IP12=NETXDUO
-Mcu.IP13=NVIC
-Mcu.IP14=PWR
-Mcu.IP15=RCC
-Mcu.IP16=SPI2
-Mcu.IP17=SYS
-Mcu.IP18=THREADX
-Mcu.IP19=UART7
+Mcu.IP10=IWDG
+Mcu.IP11=LPUART1
+Mcu.IP12=MEMORYMAP
+Mcu.IP13=NETXDUO
+Mcu.IP14=NVIC
+Mcu.IP15=PWR
+Mcu.IP16=RCC
+Mcu.IP17=SPI2
+Mcu.IP18=SYS
+Mcu.IP19=THREADX
 Mcu.IP2=BOOTPATH
+Mcu.IP20=UART7
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=DCACHE1
 Mcu.IP5=ETH
@@ -145,7 +145,7 @@ Mcu.IP6=FDCAN2
 Mcu.IP7=GPDMA1
 Mcu.IP8=I2C2
 Mcu.IP9=ICACHE
-Mcu.IPNb=20
+Mcu.IPNb=21
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -165,16 +165,17 @@ Mcu.Pin11=PF5
 Mcu.Pin110=VP_GPDMA1_VS_GPDMACH4
 Mcu.Pin111=VP_GPDMA1_VS_GPDMACH5
 Mcu.Pin112=VP_ICACHE_VS_ICACHE
-Mcu.Pin113=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin114=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin115=VP_NETXDUO_VS_EthernetOoPhyOoInterface
-Mcu.Pin116=VP_PWR_VS_SECSignals
-Mcu.Pin117=VP_PWR_VS_LPOM
-Mcu.Pin118=VP_SYS_VS_tim1
-Mcu.Pin119=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin113=VP_IWDG_VS_IWDG
+Mcu.Pin114=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin115=VP_NETXDUO_VS_NetworkOoInterface
+Mcu.Pin116=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin117=VP_PWR_VS_SECSignals
+Mcu.Pin118=VP_PWR_VS_LPOM
+Mcu.Pin119=VP_SYS_VS_tim1
 Mcu.Pin12=PF6
-Mcu.Pin120=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin121=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin120=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin121=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin122=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF7
 Mcu.Pin14=PF8
 Mcu.Pin15=PF9
@@ -270,7 +271,7 @@ Mcu.Pin96=PG12
 Mcu.Pin97=PG13
 Mcu.Pin98=PG14
 Mcu.Pin99=PG15
-Mcu.PinsNb=122
+Mcu.PinsNb=123
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -459,13 +460,6 @@ PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=MUX_SEL4
 PC9.Locked=true
 PC9.Signal=GPIO_Output
-PCC.Checker=false
-PCC.Line=STM32H563/H573
-PCC.MCU=STM32H563ZITx
-PCC.PartNumber=STM32H563ZITx
-PCC.Series=STM32H5
-PCC.Temperature=25
-PCC.Vdd=3.0
 PD0.GPIOParameters=GPIO_Label
 PD0.GPIO_Label=EF_DASH_EN
 PD0.Locked=true
@@ -696,11 +690,10 @@ ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32H563ZITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H5 V1.5.0
 ProjectManager.FreePins=false
-ProjectManager.FreePinsContext=
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
@@ -716,7 +709,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_DCACHE1_Init-DCACHE1-false-HAL-true,15-MX_RTC_Init-RTC-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC2_Init-ADC2-false-HAL-true,8-MX_FDCAN2_Init-FDCAN2-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true,11-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,12-MX_SPI2_Init-SPI2-false-HAL-true,13-MX_UART7_Init-UART7-false-HAL-true,14-MX_DCACHE1_Init-DCACHE1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=224000000
 RCC.AHBFreq_Value=224000000
 RCC.APB1Freq_Value=224000000
@@ -870,6 +863,8 @@ VP_GPDMA1_VS_GPDMACH5.Mode=SIMPLEREQUEST_GPDMACH5
 VP_GPDMA1_VS_GPDMACH5.Signal=GPDMA1_VS_GPDMACH5
 VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
 VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_NETXDUO_VS_EthernetOoPhyOoInterface.Mode=Custom_Phy_Interface
